==> drliu6509/stm32-ai-projects/008eeprom测试/HARDWARE/TOUCH/touch.c <==
#include "touch.h"
#include "lcd.h"
#include "delay.h"
#include "stdlib.h"
#include "math.h"
#include "24cxx.h"

u8 TP_Init(void)
{
  GPIO_InitTypeDef  GPIO_InitStructure;	
	
	if(lcddev.id==0X5510)		//电容触摸屏
	{
		if(GT9147_Init()==0)	//是GT9147
		{ 
			tp_dev.scan=GT9147_Scan;	//扫描函数指向GT9147触摸屏扫描
		}else
		{
			OTT2001A_Init();
			tp_dev.scan=OTT2001A_Scan;	//扫描函数指向OTT2001A触摸屏扫描
		}
		tp_dev.touchtype|=0X80;	//电容屏 
		tp_dev.touchtype|=lcddev.dir&0X01;//横屏还是竖屏 
		return 0;
	}else if(lcddev.id==0X1963)
	{
		FT5206_Init();
		tp_dev.scan=FT5206_Scan;		//扫描函数指向GT9147触摸屏扫描		
		tp_dev.touchtype|=0X80;			//电容屏 
		tp_dev.touchtype|=lcddev.dir&0X01;//横屏还是竖屏 
		return 0;
	}else
	{
		//初始化电阻触摸屏相关IO口(PB0,PB1,PB2,PC13,PF11)
		__HAL_RCC_GPIOB_CLK_ENABLE();	//使能GPIOB时钟
		__HAL_RCC_GPIOC_CLK_ENABLE();	//使能GPIOC时钟
		__HAL_RCC_GPIOF_CLK_ENABLE();	//使能GPIOF时钟

		//PB1,PB2初始化为上拉输入(PEN,DOUT)
		GPIO_InitStructure.Pin=GPIO_PIN_1|GPIO_PIN_2;
		GPIO_InitStructure.Mode=GPIO_MODE_INPUT;	//输入模式
		GPIO_InitStructure.Pull=GPIO_PULLUP;		//上拉
		GPIO_InitStructure.Speed=GPIO_SPEED_FAST;	//高速
		HAL_GPIO_Init(GPIOB,&GPIO_InitStructure);

		//PB0初始化为推挽输出(TCLK)
		GPIO_InitStructure.Pin=GPIO_PIN_0;
		GPIO_InitStructure.Mode=GPIO_MODE_OUTPUT_PP;	//推挽输出
		GPIO_InitStructure.Pull=GPIO_NOPULL;
		GPIO_InitStructure.Speed=GPIO_SPEED_FAST;
		HAL_GPIO_Init(GPIOB,&GPIO_InitStructure);

		//PC13初始化为推挽输出(TCS)
		GPIO_InitStructure.Pin=GPIO_PIN_13;
		GPIO_InitStructure.Mode=GPIO_MODE_OUTPUT_PP;
		GPIO_InitStructure.Pull=GPIO_NOPULL;
		GPIO_InitStructure.Speed=GPIO_SPEED_FAST;
		HAL_GPIO_Init(GPIOC,&GPIO_InitStructure);

		//PF11初始化为推挽输出(TDIN)
		GPIO_InitStructure.Pin=GPIO_PIN_11;
		GPIO_InitStructure.Mode=GPIO_MODE_OUTPUT_PP;
		GPIO_InitStructure.Pull=GPIO_NOPULL;
		GPIO_InitStructure.Speed=GPIO_SPEED_FAST;
		HAL_GPIO_Init(GPIOF,&GPIO_InitStructure);

		TP_Read_XY(&tp_dev.x[0],&tp_dev.y[0]);//第一次读取初始化	 
		AT24CXX_Init();		//初始化24CXX
		if(TP_Get_Adjdata())return 0;//已经校准
		else			   //未校准?
		{ 										    
			LCD_Clear(WHITE);//清屏
			TP_Adjust();  	//屏幕校准 
			TP_Save_Adjdata();	 
		}			
		TP_Get_Adjdata();	
	}
	return 1; 									 
}
